--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <li><span class="list-number">22.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6281237732540"><span class="whatsapp-icon"></span> Dana Sakti</a></span></li>
       <li><span class="list-number">23.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6285371022838"><span class="whatsapp-icon"></span> Elvi Rahmi</a></span></li>
       <li><span class="list-number">24.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6282289006533"><span class="whatsapp-icon"></span> Andini Fransisca</a></span></li>
-      <li><span class="list-number">25.</span> <span class="click</span> <span class="contact-name"><a href="https://wa.me/628561770913"><span class="whatsapp-icon"></span> Nathania Khairunnisa</a></span></li>
+      <li><span class="list-number">25.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/628561770913"><span class="whatsapp-icon"></span> Nathania Khairunnisa</a></span></li>
       <li><span class="list-number">26.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6287841423588"><span class="whatsapp-icon"></span> 0878...3588</a></span></li>
       <li><span class="list-number">27.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6289530091366"><span class="whatsapp-icon"></span> Ento</a></span></li>
       <li><span class="list-number">28.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6282181102890"><span class="whatsapp-icon"></span> Natasya Marintan</a></span></li>
@@ -298,6 +298,13 @@
       <li><span class="list-number">50.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6281243414793"><span class="whatsapp-icon"></span> Nikmatul Fidriya Hanapi</a></span></li>
       <li><span class="list-number">51.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6289663617565"><span class="whatsapp-icon"></span> siem natalia</a></span></li>
       <li><span class="list-number">52.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6285777622081"><span class="whatsapp-icon"></span> Nurul A</a></span></li>
+      <li><span class="list-number">53.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6283899660624"><span class="whatsapp-icon"></span> Syamsuddin</a></span></li>
+      <li><span class="list-number">54.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6285158663051"><span class="whatsapp-icon"></span> Anissa TS</a></span></li>
+      <li><span class="list-number">55.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6283898519122"><span class="whatsapp-icon"></span> Rizki Andriyan</a></span></li>
+      <li><span class="list-number">56.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6285143275163"><span class="whatsapp-icon"></span> Lilis</a></span></li>
+      <li><span class="list-number">57.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6283835747634"><span class="whatsapp-icon"></span> Muhammad F. M</a></span></li>
+      <li><span class="list-number">58.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6289649831572"><span class="whatsapp-icon"></span> Lisa</a></span></li>
+      <li><span class="list-number">59.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6281373670048"><span class="whatsapp-icon"></span> Christian</a></span></li>
     </ol>
   </div>
 
