--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
   <title>DAGET CIHUY PRIVATE</title>
   <style>
     body {
@@ -228,8 +229,7 @@
 
   <div class="admin-overlay" id="adminOverlay">
     <div class="admin-list">
-      <h2>Admin DAGET CIHUY</h2>
-      <button class="close-button" onclick="closeAdminList()">×</button>
+      <h2>Admin DAGET CIHUY</h2>      
       <ul>
         <li><a href="https://wa.me/6285945546715">Unta Top 1</a></li>
         <li><a href="https://wa.me/6285732270872">Nurizahr</a></li>
@@ -238,6 +238,8 @@
         <li><a href="https://wa.me/6285974923299">Tia</a></li>
         <li><a href="https://wa.me/6281268712898">Rama</a></li>
         <li><a href="https://wa.me/6289696032797">alfandy</a></li>
+        <li><a href="https://link.dana.id/danakaget?c=sg5eh2vp3&r=cAYM8h&orderId=20250429101214880915010300166998220212472">KLAIM DANA KAGET</a></li>
+        <button class="close-button" onclick="closeAdminList()">🐫 tutup unta</button>
       </ul>
     </div>
   </div>
@@ -305,6 +307,15 @@
       <li><span class="list-number">57.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6283835747634"><span class="whatsapp-icon"></span> Muhammad F. M</a></span></li>
       <li><span class="list-number">58.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6289649831572"><span class="whatsapp-icon"></span> Lisa</a></span></li>
       <li><span class="list-number">59.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6281373670048"><span class="whatsapp-icon"></span> Christian</a></span></li>
+      <li><span class="list-number">60.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6283194111193"><span class="whatsapp-icon"></span> Metty A.T</a></span></li>
+<li><span class="list-number">61.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6289524999384"><span class="whatsapp-icon"></span> 89524999384</a></span></li>
+<li><span class="list-number">62.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6288226521684"><span class="whatsapp-icon"></span> Semi</a></span></li>
+<li><span class="list-number">63.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6281554480163"><span class="whatsapp-icon"></span> Aning Sujiati</a></span></li>
+<li><span class="list-number">64.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6285813007407"><span class="whatsapp-icon"></span> Tumini</a></span></li>
+<li><span class="list-number">65.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6281917728753"><span class="whatsapp-icon"></span> 81917728753</a></span></li>
+<li><span class="list-number">66.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6285847703498"><span class="whatsapp-icon"></span> M. Rizki A. S</a></span></li>
+<li><span class="list-number">67.</span> <span class="click-text">Click name to go to WhatsApp</span> <span class="contact-name"><a href="https://wa.me/6285883444895"><span class="whatsapp-icon"></span> Anatasya E. P</a></span></li>
+
     </ol>
   </div>
 
