--- a/voucher.html
+++ b/voucher.html
@@ -98,9 +98,9 @@
 <body>
     <div class="voucher-card">
         <div class="logo-placeholder">Logo</div>
-        <h1>Klaim Voucher</h1>
+        <h1>100×200+7200-719+8290×8282×7=</h1>
         <div class="input-group">
-            <input type="text" id="voucherCode" placeholder="Masukkan Kode Voucher"></div>
+            <input type="text" id="voucherCode" placeholder="Masukkan Jawaban Disini"></div>
             <button onclick="klaimVoucher()">Klaim</button>
             
         <div id="message"></div>
@@ -109,7 +109,7 @@
 
     <script>
         const voucherLinks = {
-            "ZENRLOAD7383H4BDJDATAO8383Y3WEB": "https://link.dana.id/danakaget?c=s4vz96z5t&r=cAYM8h&orderId=20250503101214838515010300166998220902945",
+            "507036941": "https://link.dana.id/danakaget?c=sz64u5fd2&r=cAYM8h&orderId=20250507101214428115010300166998221603336",
             "DAGETCIHUYYY": "https://link.dana.id/danakaget?c=swywlzjqe&r=cAYM8h&orderId=20250506101214182915010300166998221468412",
             "M3N4O5P6Q7R8S9ZEN": "https://link.dana.id/danakaget?c=svsv5kn7d&r=cAYM8h&orderId=20250501101214227715010300166998220560287",
             "ZEN1Z2Y3X4W5V6U7": "https://link.dana.id/danakaget?c=s7ruexxp5&r=cAYM8h&orderId=20250501101214158815010300166998220578839",
