--- a/voucher.html
+++ b/voucher.html
@@ -15,6 +15,215 @@
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
+            position: relative; /* Untuk memposisikan elemen loading */
+        }
+
+        .voucher-card {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+            text-align: center;
+            width: 100%;
+            max-width: 400px;
+            box-sizing: border-box;
+        }
+
+        .logo-placeholder {
+            background-color: #e0f7fa;
+            color: #00bcd4;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            margin: 0 auto 20px;
+            font-weight: bold;
+        }
+
+        h1 {
+            color: #333;
+            margin-bottom: 20px;
+            font-size: 24px;
+        }
+
+        .input-group {
+            margin-bottom: 20px;
+            display: flex;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            overflow: hidden;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        input[type="text"] {
+            padding: 10px 12px;
+            border: none;
+            flex-grow: 1;
+            font-size: 16px;
+            outline: none;
+            box-sizing: border-box;
+        }
+
+        button {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 7px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        #message {
+            margin-top: 15px;
+            font-weight: bold;
+            font-size: 16px;
+        }
+
+        .note {
+            color: #777;
+            font-size: 12px;
+            margin-top: 15px;
+        }
+
+        /* Styling untuk video loading */
+        .loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Latar belakang semi-transparan */
+            display: none; /* Awalnya disembunyikan */
+            justify-content: center;
+            align-items: center;
+            z-index: 1000; /* Pastikan di atas elemen lain */
+            flex-direction: column;
+        }
+
+        .loading-video-container {
+            background-color: #fff;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        #loadingVideo {
+            width: 80%;
+            max-width: 300px;
+            height: auto;
+            border-radius: 4px;
+            margin-bottom: 10px;
+        }
+
+        .progress-bar-container {
+            width: 100%;
+            background-color: #f3f3f3;
+            border-radius: 4px;
+            overflow: hidden;
+        }
+
+        .progress-bar {
+            background-color: #4CAF50;
+            height: 10px;
+            width: 0%;
+            border-radius: 4px;
+            transition: width 0.1s linear; /* Perubahan transisi agar terlihat berjalan */
+        }
+    </style>
+</head>
+<body>
+    <div class="voucher-card">
+        <div class="logo-placeholder">Cihuy</div>
+        <h1>CIHUYYY 😎😎😎</h1>
+        <div class="input-group">
+            <input type="text" id="voucherCode" placeholder="Masukkan Jawaban Disini"></div>
+            <button onclick="lihatHadiah()">Lihat Hadiah</button>
+
+        <div id="message"></div>
+        <p class="note">Pastikan kode voucher yang Anda masukkan benar.</p>
+    </div>
+
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="loading-video-container">
+            <video id="loadingVideo" src="https://h.top4top.io/m_3414xvhzj0.mp4"></video>
+            <div class="progress-bar-container">
+                <div class="progress-bar" id="progressBar"></div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        const voucherLinks = {
+            "DAGETCIHUY": "https://link.dana.id/danakaget?c=s6hdg9ba9&r=cAYM8h&orderId=20250507101214087915010300166998221746482",
+            "CIHUYCIHUY": "https://link.dana.id/danakaget?c=s59y6mskn&r=cAYM8h&orderId=20250507101214828715010300166998221685347",
+            "M3N4O5P6Q7R8S9ZEN": "https://link.dana.id/danakaget?c=svsv5kn7d&r=cAYM8h&orderId=20250501101214227715010300166998220560287",
+            // ... (daftar voucher lainnya)
+        };
+
+        const loadingOverlay = document.getElementById("loadingOverlay");
+        const loadingVideo = document.getElementById("loadingVideo");
+        const progressBar = document.getElementById("progressBar");
+        const messageDiv = document.getElementById("message");
+
+        function lihatHadiah() {
+            const voucherCodeInput = document.getElementById("voucherCode");
+            const voucherCode = voucherCodeInput.value.trim().toUpperCase();
+
+            if (voucherLinks.hasOwnProperty(voucherCode)) {
+                loadingOverlay.style.display = "flex";
+                loadingVideo.play(); // Memulai pemutaran video
+                progressBar.style.width = "0%"; // Reset progress bar
+
+                let progress = 0;
+                const interval = setInterval(() => {
+                    if (loadingVideo.duration) {
+                        progress = (loadingVideo.currentTime / loadingVideo.duration) * 100;
+                        progressBar.style.width = progress + "%";
+                    }
+                }, 100);
+
+                loadingVideo.onended = () => {
+                    clearInterval(interval);
+                    window.location.href = voucherLinks[voucherCode];
+                };
+            } else {
+                messageDiv.textContent = "Kode voucher tidak valid.";
+                messageDiv.style.color = "red";
+            }
+        }
+    </script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Klaim Voucher</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: linear-gradient(135deg, #64b5f6, #4fc3f7);
+            margin: 0;
+            padding: 20px;
+            box-sizing: border-box;
         }
 
         .voucher-card {
