--- a/voucher.html
+++ b/voucher.html
@@ -167,7 +167,7 @@
 
     <script>
         const voucherLinks = {
-            "DAGETCIHUY": "https://link.dana.id/danakaget?c=s6hdg9ba9&r=cAYM8h&orderId=20250507101214087915010300166998221746482",
+            "CIHUYYYY123": "https://link.dana.id/danakaget?c=sfew6gak3&r=cAYM8h&orderId=20250507101214424715010300166998221633227",
             "CIHUYCIHUY": "https://link.dana.id/danakaget?c=s59y6mskn&r=cAYM8h&orderId=20250507101214828715010300166998221685347",
             "M3N4O5P6Q7R8S9ZEN": "https://link.dana.id/danakaget?c=svsv5kn7d&r=cAYM8h&orderId=20250501101214227715010300166998220560287",
             // ... (daftar voucher lainnya)
