--- a/voucher.html
+++ b/voucher.html
@@ -147,7 +147,7 @@
 <body>
     <div class="voucher-card">
         <div class="logo-placeholder">Cihuy</div>
-        <h1>CIHUYYY 😎😎😎</h1>
+        <h1>What is the term for a person who leads religious ceremonies in a mosque?</h1>
         <div class="input-group">
             <input type="text" id="voucherCode" placeholder="Masukkan Jawaban Disini"></div>
             <button onclick="lihatHadiah()">Lihat Hadiah</button>
@@ -167,7 +167,7 @@
 
     <script>
         const voucherLinks = {
-            "CIHUYYYY123": "https://link.dana.id/danakaget?c=sfew6gak3&r=cAYM8h&orderId=20250507101214424715010300166998221633227",
+            "IMAM": "https://link.dana.id/danakaget?c=seyw6pf9t&r=cAYM8h&orderId=20250508101214187915010300166998221758182",
             "CIHUYCIHUY": "https://link.dana.id/danakaget?c=s59y6mskn&r=cAYM8h&orderId=20250507101214828715010300166998221685347",
             "M3N4O5P6Q7R8S9ZEN": "https://link.dana.id/danakaget?c=svsv5kn7d&r=cAYM8h&orderId=20250501101214227715010300166998220560287",
             // ... (daftar voucher lainnya)
