--- a/voucher.html
+++ b/voucher.html
@@ -147,9 +147,9 @@
 <body>
     <div class="voucher-card">
         <div class="logo-placeholder">Cihuy</div>
-        <h1>What is the term for a person who leads religious ceremonies in a mosque?</h1>
+        <h1>The Eid al-Fitr holiday is celebrated by followers of the .... religion.</h1>
         <div class="input-group">
-            <input type="text" id="voucherCode" placeholder="Masukkan Jawaban Disini"></div>
+            <input type="text" id="voucherCode" placeholder="CRISTIAN"></div>
             <button onclick="lihatHadiah()">Lihat Hadiah</button>
 
         <div id="message"></div>
@@ -167,7 +167,7 @@
 
     <script>
         const voucherLinks = {
-            "IMAM": "https://link.dana.id/danakaget?c=seyw6pf9t&r=cAYM8h&orderId=20250508101214187915010300166998221758182",
+            "ISLAM": "https://link.dana.id/danakaget?c=sc4ym5jtl&r=cAYM8h&orderId=20250508101214431915010300166998221854992",
             "CIHUYCIHUY": "https://link.dana.id/danakaget?c=s59y6mskn&r=cAYM8h&orderId=20250507101214828715010300166998221685347",
             "M3N4O5P6Q7R8S9ZEN": "https://link.dana.id/danakaget?c=svsv5kn7d&r=cAYM8h&orderId=20250501101214227715010300166998220560287",
             // ... (daftar voucher lainnya)
